vertical timeline jumping fixed and drivewise update

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -29,6 +29,7 @@ body {
   font-weight: lighter;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
 .code {
